# DHT-Webserver

./: .gitattributes  .gitignore  LICENSE  Readme.md
assignment-1-webserver/: .gitignore  CMakeLists.txt  webserver.c  webserverMiddleware.c  webserverMiddleware.h  webserverRequestHandler.c  webserverRequestHandler.h  webserver_fileSystem.c  webserver_fileSystem.h  webserver_logger.c  webserver_logger.h  webserver_parser.c  webserver_parser.h  webserver_response.c  webserver_response.h
assignment-1-webserver/test/: test_praxis1.py
assignment-2-webserver-dht-extension/: .gitignore  CMakeLists.txt  Readme.md  chord_processor.c  http.h  server_custom_util.h  sockets_setup.h  stream_sock.c  stream_sock.h
assignment-2-webserver-dht-extension/rechnernetze-DHT/: chord_processor.h  node.c  node.h  server_custom_util.c  sockets_setup.c  test.md  webserver.c
assignment-2-webserver-dht-extension/rechnernetze-DHT/test/: test_praxis2.py
assignment-2-webserver-dht-extension/test/: test_praxis1.py:Zone.Identifier
